tests/ui/rfcs/rfc-2093-infer-outlives/explicit-enum.stderr
error: rustc_outlives
  --> $DIR/explicit-enum.rs:4:1
   |
LL | enum Foo<'a, U> {
   | ^^^^^^^^^^^^^^^
   |
   = note: U: 'a

error[E0640]: rustc_outlives
  --> $DIR/explicit-enum.rs:4:1
   |
LL | enum Foo<'a, U> {
   | ^^^^^^^^^^^^^^^
   |
note: U: 'a
  --> $DIR/explicit-enum.rs:9:28
   |
LL | struct Bar<'x, T> where T: 'x {
   |                            ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0640`.
